Fixed menu item width on smaller screens

--- a/static/styles/menu.css
+++ b/static/styles/menu.css
@@ -19,7 +19,7 @@
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	padding: 20px;
+	padding: 20px 5px;
 	height: 120px;
 	text-decoration: none;
 	justify-self: stretch;
